force-app/main/default/objects/GNT_ChatThread__c/GNT_ChatThread__c.object-meta.xml
<CustomObject>
    <description>Chat thread for custom chat.</description>
    <label>GNT Chat Thread</label>
    <pluralLabel>GNT Chat Threads</pluralLabel>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
</CustomObject>