force-app/main/default/objects/GNT_ChatThread__c/fields/GNT_Description__c.field-meta.xml
<CustomField>
    <fullName>GNT_Description__c</fullName>
    <label>GNT Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>