force-app/main/default/objects/GNT_ChatThread__c/fields/GNT_ExternalThreadId__c.field-meta.xml
<CustomField>
    <fullName>GNT_ExternalThreadId__c</fullName>
    <externalId>true</externalId>
    <label>GNT External Thread Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>