force-app/main/default/objects/GNT_ChatThread__c/fields/GNT_RelatedObjectType__c.field-meta.xml
<CustomField>
    <fullName>GNT_RelatedObjectType__c</fullName>
    <label>関連オブジェクト種別</label>
    <length>80</length>
    <type>Text</type>
</CustomField>