force-app/main/default/objects/GNT_ChatThread__c/fields/GNT_RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>GNT_RelatedRecordId__c</fullName>
    <label>GNT Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>