force-app/main/default/objects/GNT_ChatThread__c/fields/GNT_Status__c.field-meta.xml
<CustomField>
    <fullName>GNT_Status__c</fullName>
    <label>GNT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>